@@ -1,3 +1,9 @@
+TAG: derivationload-4-3-0-1
+DATE: 05-11-2009
+STAFF:  sc
+CHANGES: TR7493
+1) createDerivationInputFile.py - removed reference from the derivation name
+
 TAG: derivationload-4-2-1-5
 DATE: 04-23-2009
 STAFF:  sc
